Sprint 4: add statistical detector and update docs